<resources>
    <string name="app_name">Restaurant Rating</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="hello">Hello</string>
    <string name="search">Search</string>
    <string name="archives">Archives</string>
    <string name="new_form">New Form</string>
    <string name="form">Form</string>
    <string name="utilities">Utilities</string>
    <string name="Sign_out">Sign Out</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="city">City</string>
    <string name="create_new_form">Create New Form</string>
    <string name="question">Question</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="Back">Back</string>
    <string name="Next">Next</string>
    <string name="selected_answer">Selected Answer</string>
    <string name="score">score</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="question_count">question_1/x</string>
    <string name="total_score">score: 0</string>
    <string name="restaurant">Restaurant</string>
    <string name="grade">Grade</string>
    <string name="inspected_day">Inspected Day</string>
    <string name="user_name">User Name</string>
    <string name="download">Download</string>
    <string name="self_inspection_pdf">instructions</string>

    <string-array name="inspectors">
        <item>Private Inspector</item>
        <item>Government Inspector</item>
    </string-array>

    <string-array name="city">
        <item>Ofakim</item>
        <item>Or Yehuda</item>
        <item>Or Akiva</item>
        <item>Eilat</item>
        <item>Elad</item>
        <item>Ariel</item>
        <item>Ashdod</item>
        <item>Ashkelon</item>
        <item>Beer Sheva</item>
        <item>Beit Shean</item>
        <item>Beit Shemesh</item>
        <item>Beitar Illit</item>
        <item>Bnei Brak</item>
        <item>Bat Yam</item>
        <item>Givat Shmuel</item>
        <item>Givatayim</item>
        <item>Dimona</item>
        <item>Hod Hasharon</item>
        <item>Herzliya</item>
        <item>Hadera</item>
        <item>Holon</item>
        <item>Haifa</item>
        <item>Tiberias</item>
        <item>Taybeh</item>
        <item>castle</item>
        <item>Tirat Carmel</item>
        <item>Yavne</item>
        <item>Yehud-Monosson</item>
        <item>Yokneam Illith</item>
        <item>Jerusalem</item>
        <item>Kfar Yona</item>
        <item>Kfar Saba</item>
        <item>Kafr Qasim</item>
        <item>Carmiel</item>
        <item>Lod</item>
        <item>Migdal Haemek</item>
        <!--<item>Modi'in Illit</item>-->
        <!--<item>Modi'in Maccabim-Reut</item>-->
        <!--<item>Ma'ale Adumim</item>-->
        <!--<item>Tarshiha</item>-->
        <!--<item>Nahariya</item>-->
        <!--<item>Nof Galilee</item>-->
        <!--<item>Ness Ziona</item>-->
        <!--<item>Nazareth</item>-->
        <!--<item>Nesher</item>-->
        <!--<item>Netivot</item>-->
        <!--<item>Natnia</item>-->
        <!--<item>Sakhnin</item>-->
        <!--<item>Acre</item>-->
        <!--<item>Afula</item>-->
        <!--<item>Araba</item>-->
        <!--<item>Arad</item>-->
        <!--<item>Petah Tikva</item>-->
        <!--<item>Zefat</item>-->
        <!--<item>Calensua</item>-->
        <!--<item>Kiryat Ono</item>-->
        <!--<item>Kiryat Ata</item>-->
        <!--<item>Kiryat Bialik</item>-->
        <!--<item>Kiryat Gat</item>-->
        <!--<item>Kiryat Yam</item>-->
        <!--<item>Kiryat Motzkin</item>-->
        <!--<item>Kiryat Malachi</item>-->
        <!--<item>Kiryat Shmona</item>-->
        <!--<item>Rosh HaAyin</item>-->
        <!--<item>Rishon Lezion</item>-->
        <!--<item>Raht</item>-->
        <!--<item>Rehovot</item>-->
        <!--<item>Ramla</item>-->
        <!--<item>Ramat Gan</item>-->
        <!--<item>Ramat Hasharon</item>-->
        <!--<item>Raanana</item>-->
        <!--<item>Sderot</item>-->
        <!--<item>Shfaram</item>-->
        <!--<item>Tel Aviv</item>-->
        <!--<item>Jaffa</item>-->
    </string-array>

    <string-array name="Restaurnt">
        <item>Moses</item>
        <item>BBB</item>
        <item>Jasmino</item>
        <item>Agadir</item>
        <item>Black</item>
        <item>Burger Saloon</item>
    </string-array>
</resources>
