<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/restaurantNameSearchTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/restaurant" />

        <TextView
            android:id="@+id/citySearchTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:padding="5dp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/gradeSearchTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grade"
            android:padding="5dp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/totalScoreSearchTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:padding="5dp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/inspectionDaySearchTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inspected_day"
            android:padding="5dp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/inspectorNameSearchTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:padding="5dp"
            android:textStyle="italic"/>

    </LinearLayout>

</android.support.v7.widget.CardView>
