<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="23dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textAlert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="23dp"
                android:paddingTop="5dp"
                android:text="@string/question"
                android:textSize="17sp"
                android:textStyle="bold"
                android:padding="10dp"/>

            <RadioGroup
                android:padding="10dp"
                android:id="@+id/radioGroup"
                android:layout_marginTop="19dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textAlert"
                android:layout_centerVertical="true">

                <RadioButton
                    android:id="@+id/radioButtonOption1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/radioButtonOption2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/radioButtonOption3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RadioGroup>

            <EditText
                android:id="@+id/remarkEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/radioGroup"
                android:hint="@string/add_a_comment"/>

            <Button
                android:id="@+id/okButton"
                android:background="@color/colorAccent"
                android:text="@string/ok"
                android:layout_marginTop="19dp"
                android:layout_below="@id/remarkEditText"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <Button
                android:id="@+id/cancelButton"
                android:layout_alignParentEnd="true"
                android:text="@string/cancel"
                android:background="@color/colorAccent"
                android:layout_alignBottom="@id/okButton"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>